makes/foss/units/integrates/back/deploy/dev/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrates-${CI_COMMIT_REF_NAME}
  namespace: development
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: integrates-${CI_COMMIT_REF_NAME}
  template:
    metadata:
      labels:
        app: integrates-${CI_COMMIT_REF_NAME}
        # This ensures that the resource is updated on every apply
        uuid: ${UUID}
    spec:
      nodeSelector:
        worker_group: development
      containers:
        - name: integrates
          image: ghcr.io/fluidattacks/makes:22.04
          imagePullPolicy: Always
          command: [sh]
          args:
            - -c
            - m f@${CI_COMMIT_SHA} /integrates/back/deploy/probes/liveness;
              m f@${CI_COMMIT_SHA} /integrates/back/deploy/probes/readiness;
              m f@${CI_COMMIT_SHA} /integrates/back eph
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 5000Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
          ports:
            - containerPort: 8001
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - ~/.makes/out-integrates-back-deploy-probes-readiness/bin/*
                  aws_login_dev dev
                  FluidIntegrates http://localhost:8001
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 60
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - ~/.makes/out-integrates-back-deploy-probes-liveness/bin/*
                  aws_login_dev dev
                  FluidIntegrates http://localhost:8001
                  https://${CI_COMMIT_REF_NAME}.app.fluidattacks.com
            initialDelaySeconds: 120
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 10
            timeoutSeconds: 60
        - name: db
          image: ghcr.io/fluidattacks/makes:22.04
          imagePullPolicy: Always
          command: [m]
          args:
            - f@${CI_COMMIT_SHA}
            - ${DB_JOB}
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 3000Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
        - name: cache
          image: ghcr.io/fluidattacks/makes:22.04
          imagePullPolicy: Always
          command: [m]
          args:
            - f@${CI_COMMIT_SHA}
            - /integrates/cache
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 3000Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
        - name: storage
          image: ghcr.io/fluidattacks/makes:22.04
          imagePullPolicy: Always
          command: [m]
          args:
            - f@${CI_COMMIT_SHA}
            - /integrates/storage
          resources:
            requests:
              cpu: 600m
              memory: 2000Mi
            limits:
              cpu: 4000m
              memory: 3000Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
